force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
  <label>Payment</label>
  <pluralLabel>Payments</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Payment Number</label>
    <displayFormat>PAY-{00000000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>