force-app/main/default/objects/Payment__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipName>Account_Payments</relationshipName>
  <relationshipLabel>Payments</relationshipLabel>
</CustomField>