force-app/main/default/objects/Payment__c/fields/Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Application_Count__c</fullName>
    <label>Application Count</label>
    <summaryFilterItems>
        <field>Payment_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Application__c.Payment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>