force-app/main/default/objects/Payment__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <summaryFilterItems>
        <field>Payment_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Application__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Payment_Application__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>