force-app/main/default/objects/Payment__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
  <fullName>Business_Unit__c</fullName>
  <label>Business Unit</label>
  <type>Lookup</type>
  <referenceTo>Business_Unit__c</referenceTo>
  <relationshipName>Business_Unit_Payments</relationshipName>
  <relationshipLabel>Payments</relationshipLabel>
</CustomField>