force-app/main/default/objects/Payment__c/fields/Check_Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>Check_Reference_URL__c</fullName>
    <label>Check Reference URL</label>
    <type>Url</type>
</CustomField>