force-app/main/default/objects/Payment__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
  <fullName>Fee_Amount__c</fullName>
  <label>Fee Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>