force-app/main/default/objects/Payment__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
  <fullName>Net_Amount__c</fullName>
  <label>Net Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <description>Amount minus processor fees.</description>
</CustomField>