force-app/main/default/objects/Payment__c/fields/Payment_Channel__c.field-meta.xml
<CustomField>
  <fullName>Payment_Channel__c</fullName>
  <label>Payment Channel</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>In-Person</fullName><default>true</default><label>In-Person</label></value>
      <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
      <value><fullName>US Mail</fullName><default>false</default><label>US Mail</label></value>
      <value><fullName>Auto-Pay</fullName><default>false</default><label>Auto-Pay</label></value>
      <value><fullName>Portal</fullName><default>false</default><label>Portal</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>