force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
  <fullName>Payment_Method__c</fullName>
  <label>Payment Method</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>ACH</fullName><default>false</default><label>ACH</label></value>      
      <value><fullName>Credit Card</fullName><default>true</default><label>Credit Card</label></value>
      <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
      <value><fullName>Check</fullName><default>false</default><label>Check</label></value>
      <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>