force-app/main/default/objects/Payment__c/fields/Payment_Method_Other__c.field-meta.xml
<CustomField>
  <fullName>Payment_Method_Other__c</fullName>
  <label>Payment Method (Other)</label>
  <type>Text</type>
  <length>80</length>
  <description>When Payment Method = Other, capture provider/method label (e.g., PayPal, Apple Pay).</description>
</CustomField>