force-app/main/default/objects/Payment__c/fields/Payment_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Payment_Utilization__c</fullName>
    <label>Payment Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapplied</fullName>
                <default>true</default>
                <label>Unapplied</label>
            </value>
            <value>
                <fullName>Partially Applied</fullName>
            </value>
            <value>
                <fullName>Fully Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>