force-app/main/default/objects/Payment__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Received By</relationshipLabel>
    <relationshipName>Received_By</relationshipName>
    <type>Lookup</type>
</CustomField>