force-app/main/default/objects/Payment__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <formula>BLANKVALUE(Amount__c,0) - BLANKVALUE(Applied_Amount__c,0)</formula>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>