force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>